# SeattleGradeBook

./: README.md  gradle.properties  settings.gradle.kts
.fleet/: receipt.json
composeApp/: build.gradle.kts
composeApp/release/: output-metadata.json
composeApp/release/baselineProfiles/0/: composeApp-release.dm
composeApp/release/baselineProfiles/1/: composeApp-release.dm
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/res/drawable/: ic_launcher_foreground.xml
composeApp/src/androidMain/res/layout/: class_appwidget_loading.xml  class_appwidget_preview.xml
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/androidMain/res/xml/: class_widget_info.xml
composeApp/src/commonMain/composeResources/drawable/: settings_customized.xml
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonTest/kotlin/: BackgroundSyncTest.kt  MockSourceData.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: BackgroundTaskManager.swift  ContentView.swift  Info.plist  RustBridge.m  iOSApp.swift  iosApp-Bridging-Header.h  pluey.m4a  sourceapp.h
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp.xcodeproj/xcshareddata/xcschemes/: iosApp.xcscheme
iosApp/iosApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
iosApp/iosApp/seattle gradebook.icon/: icon.json
sourceapp/: .gitignore  Cargo.toml  build_android.sh
sourceapp/src/: common.rs  ffi.rs  jni.rs  lib.rs  main.rs
(+59 files in other folders)
