[package]
name = "sourceapp"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["blocking", "cookies", "native-tls-vendored"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
url = "2.5.2"
futures-io = { version = "0.3.31" }
thiserror = "1.0.64"
jni = { version = "0.21.1" }

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "runner"
path = "src/main.rs"
test = false
bench = false

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1" }